--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@react-native-community/masked-view": "0.1.6",
     "@react-navigation/native": "^5.1.6",
     "@react-navigation/stack": "^5.2.11",
-    "expo": "~37.0.3",
+    "expo": "^37.0.7",
+    "firebase": "7.9.0",
     "galio-framework": "^0.6.3",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
