[EVOL]Ajouter la barre de navigation en bas

--- a/app.json
+++ b/app.json
@@ -34,6 +34,8 @@
         "messagingSenderId": "46299516163",
         "appId": "1:46299516163:web:be2e30a1d6d8e7da312d36"
       }
-    }
+    },
+    "description": "",
+    "githubUrl": "https://github.com/elhmarouan/reaktive-starter"
   }
 }
